--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,10 @@
                 socket.emit('my event', {data: 'I\'m connected!'});
             });
 
+	    socket.on('start_game', function(data) {
+            	    console.log('start game data', data);
+            });
+
             // Event handler for server sent data.
             // The callback function is invoked whenever the server emits data
             // to the client. The data is then displayed in the "Received"
