--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Testing Matter.js</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bobr.css">
+    <link rel="stylesheet" href="css/bobr_base.css">
     <script src="js/vendor/matter.js"></script>
     <script src="js/vendor/jquery-3.1.0.slim.min.js"></script>
     <script src="js/vendor/socket.io-1.4.5.js"></script>
@@ -13,6 +15,7 @@
     <div id="container" draggable="false"></div>
     <div id="fps"></div>
   </body>
+  <script src="js/bobr.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/physics.js"></script>
   <script src="js/renderer.js"></script>
