--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
   <body>
     <div id="container" draggable="false"></div>
     <div id="fps"></div>
+    <div id="score">0</div>
   </body>
   <script src="js/bobr.js"></script>
   <script src="js/utils.js"></script>
