--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Testing Matter.js</title>
+    <title>Геометрический Дождь</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bobr.css">
     <link rel="stylesheet" href="css/bobr_base.css">
