--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -23,6 +23,9 @@ body, html {
   -moz-user-select: none;
   -o-user-select: none;
   user-select: none;
+  background-image: url('/images/bg.jpg');
+  background-size: cover;
+  background-position: center bottom;
 }
 #fps {
   font-family: monospace;
