--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -5,8 +5,11 @@ body, html {
   margin:0;
   padding:0;
 }
+html, body {
+  height: 100%;
+}
 #container {
-  height: 370px;
+  height: 100%;
   width: 100%;
   box-sizing: border-box;
   margin:0;
