--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
     <script src="js/vendor/graphics.min.js"></script>
   </head>
   <body>
+    <div id="bg"></div>
     <div id="container" draggable="false"></div>
     <div id="fps"></div>
     <div id="score">0</div>
