--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,12 @@
     <div id="container" draggable="false"></div>
     <div id="fps"></div>
     <div id="score">0</div>
+    <div id="opponent"></div>
+    <div id="overlay">
+      <h2>Введите своё имя:</h2>
+      <input id="name" type="text">
+      <button id="ok">OK</button>
+    </div>
   </body>
   <script src="js/bobr.js"></script>
   <script src="js/utils.js"></script>
