--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -99,3 +99,26 @@ body {
 #score::before {
   content: "Очки: ";
 }
+#opponent {
+  position: fixed;
+  left: 20px;
+  top: 60px;
+  font-size: 18px;
+  color: #333;
+  font-family: sans;
+}
+#opponent::before {
+  content: "Ваш соперник: ";
+}
+#overlay {
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  /*padding-top: 60%;*/
+  box-sizing: border-box;
+  background-color: white;
+  text-align: center;
+  padding-top: 10rem;
+}
